Fix margin bottom on mobile

--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
 
 main {
   text-align: center;
-  margin: 30px 50px 0 50px;
+  margin: 30px 50px 20px 50px;
 }
 
 .user-img {
